--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,12 @@ body{
 
 }
 
-
-
+.ba-container__p a:hover {
+	text-decoration: underline;	
+}
+.ba-container__p--footer a:hover {
+	text-decoration: underline;	
+}
 /* Layout */
 .ba-container{
 	padding-left: 32px;
@@ -71,7 +75,9 @@ body{
     cursor: pointer;
     box-shadow: 0px 5px 0px 0px rgba(189,25,98,1);
     margin-bottom: 20px;
+
 }
+
 .ba-container__p--footer {
 	font-size: 12px;
 	padding-bottom: 60px;
