--- a/css/layout.css
+++ b/css/layout.css
@@ -133,7 +133,7 @@ body, html {
     width: 100%;
 }
 
-.ba-row > [class*="ba-width-"] {
+.ba-row [class*="ba-width-"] {
     float: left;
     padding-left: 20px;
 }
