--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,10 @@ body{
 	color: #ea355a;
 	text-decoration: none;
 }
-.ba-container__h {
+.ba-container a:hover {
+	text-decoration: underline;
+}
+.ba-form__title {
 	font-family: Arial, sans-serif;
  
       font-size:  24px;
@@ -37,7 +40,7 @@ body{
 	color: #7a7b7f;
 }
 
-.ba-container__p {
+.ba-form__text {
 	font-family: Arial, sans-serif;
 	font-weight: 400;
 	margin-top: 0;
@@ -55,6 +58,8 @@ body{
 	width: 100%;
 	padding-left: 15px;
 	border-radius: 3px;
+
+
 }
 
 .ba-button {
@@ -72,7 +77,7 @@ body{
     box-shadow: 0px 5px 0px 0px rgba(189,25,98,1);
     margin-bottom: 20px;
 }
-.ba-container__p--footer {
+.ba-form__text--footer {
 	font-size: 12px;
 	padding-bottom: 60px;
 }
